# role-service

./: README.md  index.html  setup.cfg
openapi/: openapi.yaml
roleapi/: __init__.py  config.py  extensions.py  role.py  trino_db.py
