[metadata]
name = roleapi
version = 1.0.0
url = https://galaxy.starburst.io
license = BSD-3-Clause
maintainer = Padraig
maintainer_email = padraig.osullivan@starburstdata.com
description = Basic roles API.
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask
    trino

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    roleapi